# python_rs

./: Cargo.toml  todolist.md
src/: frame.rs  interpreter.rs  main.rs
src/object/: base_object.rs  callable_object.rs  code_object.rs  dict_object.rs  false_object.rs  int_long_object.rs  int_object.rs  iter_object.rs  list_object.rs  mod.rs  none_object.rs  null_object.rs  set_object.rs  small_tuple_object.rs  str_object.rs  true_object.rs  tuple_object.rs
src/utils/: binary_op.rs  bytecode.rs  cmp_op.rs  magic.rs  mod.rs
tests/: binary_op.py  for.py  function.py  helloworld.py  opcodes.py
