[package]
name = "python_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.5.0", features = ["derive"] }
downcast-rs = "1.2.0"
dyn-eq = "0.1.3"
dyn-hash = "0.1.2"
